:ghost: ensure text is centered when it's not wrapping

--- a/docs/airmaxdotcom.css
+++ b/docs/airmaxdotcom.css
@@ -394,12 +394,13 @@ body.no-splash #countdown-page {
   grid-row: 2 / 3;
   grid-column: 1 / 2;
   color: yellow;
-  text-align: center;
   padding: 0 10vw;
-  margin: 0;
   font-size: 3.5vh;
   display: flex;
   align-items: center;
+  text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 .middle {
